--- a/index.html
+++ b/index.html
@@ -8,26 +8,33 @@
       body {
         background-color: #FAFAFA;
       }
+      main {
+        position: absolute;
+        top: 50vh;
+        transform: translateY(-50%);
+      }
       p, h1 {
         color: RGB(20,20,20);
         width: 100%;
         text-align: center;
       }
       h1 {
-        margin: 20vh 0;
-        font-size: 10vh;
+        margin: 0 0 5vw;
+        font-size: 5vw;
       }
       p {
-        font-size: 5vh;
+        font-size: 2.5vw;
       }
     </style>
   </head>
   <body>
+  <main>
     <h1>
       Unknown link
     </h1>
     <p>
       We forgot to put a link here; sorry! Corrections will be sent in the following email.
     </p>
+  </main>
   </body>
 </html>
