--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       }
       main {
         position: absolute;
+        width: 100%;
         top: 50vh;
         transform: translateY(-50%);
       }
@@ -17,6 +18,7 @@
         color: RGB(20,20,20);
         width: 100%;
         text-align: center;
+        font-family: "Lato", "Noto Sans", sans-serif;
       }
       h1 {
         margin: 0 0 5vw;
